# Game-Framework

./: .gitignore  README.md
.github/workflows/: build.yml
Core/: CMakeLists.txt
Core/include/gameframework/: Authority.h  DependencyOrder.h  GameMode.h  GameState.h  PlayerId.h  PlayerState.h  Subsystem.h  SubsystemManager.h  World.h  WorldManagerSubsystem.h  export.h
Core/src/: DependencyOrder.cpp  GameMode.cpp  SubsystemManager.cpp  World.cpp  WorldManagerSubsystem.cpp
Core/tests/: CMakeLists.txt  smoke_test.cpp  world_test.cpp
